# azurefunction-deltatable-pipeline-with-rust

./: .gitignore  Cargo.toml  README.md  host.json  links.md  start.bat
BlobTriggerEventGrid/: function.json  function.json_bckp
images/: diagram.drawio
sample_data/: userslist.csv  userslist_01.csv
src/: main.rs  main.rs.bckp
src/helpers/: azure_storage.rs  blob_event.rs  blob_path.rs  delta_ops.rs  merge_func.rs  mod.rs
