[package]
name = "blobhandler"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Saad <me@dsaad.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.4.1"
log = "0.4.20"
bytes = "1.5.0"
parquet ="48.0.0"
futures ="0.3.28"
chrono-tz = "0.8.3"
env_logger = "0.10.0"
serde_json = { version = "1.0.107" }
tokio = { version = "1.33.0", features = ["full"] }
hyper = { version = "1.1.0", features = ["full"] }
chrono = { version = "0.4.31", features = ["serde"]  }
serde = { version = "1.0.189", features = ["derive"] }
object_store = {version = "0.7.1", features = ["azure"] }
deltalake = { version="0.16.2", features = ["azure", "parquet", "datafusion"]  }

http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }